--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+6.3.0 (2017-06-14)
+
+    Engine
+    - Add: support for new LI-7500DS instruments.
+
+    GUI
+    - Add: support for new LI-7500DS instruments.
+
 6.2.0 (2016-08-23)
 
     Engine
